hphp/test/zend/good/Zend/tests/bug35634.php.expectf
Warning: define() is deprecated and subject to removal from the Hack language in %s on line 20
Error: define() is deprecated and subject to removal from the Hack language (%s:26)
